--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     Time : Making Projects - Cloning Websites    
     Project : Disney Plus Hotstar Clone
-    Details : Disney Plus Hotstar Clone clone using ReactJS and Tailwind CSS.
+    Details : Disney Plus Hotstar UI Clone made using ReactJS and Tailwind CSS.
     Date :  
           Started :           29/9/2023  
           Complete :          1/10/2023 -> Sunday 
